Second game - sticks

--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Attempt 1, Type a num 2\n"
@@ -238,7 +238,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Attempt 2, Type a num 2\n"
@@ -252,7 +252,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Attempt 3, Type a num 5\n"
@@ -292,7 +292,48 @@
    "id": "5fa452b8-9b5b-4138-9811-1c011bd426c0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sticks_game():\n",
+    "    print(\"Добро пожаловать в игру 'Игра в палочки'!\")\n",
+    "    \n",
+    "    # Запрос начального количества палочек\n",
+    "    total_sticks = int(input(\"Введите количество палочек (по умолчанию 10): \") or 10)\n",
+    "    \n",
+    "    # Запрос имен игроков\n",
+    "    player1 = input(\"Введите имя первого игрока: \") or \"Игрок 1\"\n",
+    "    player2 = input(\"Введите имя второго игрока: \") or \"Игрок 2\"\n",
+    "    \n",
+    "    players = [player1, player2]  # Очередность игроков\n",
+    "    turn = 0  # Индекс текущего игрока\n",
+    "\n",
+    "    while total_sticks > 0:\n",
+    "        print(f\"\\nПалочек осталось: {total_sticks}\")\n",
+    "        \n",
+    "        # Запрос хода\n",
+    "        try:\n",
+    "            taken = int(input(f\"{players[turn]}, сколько палочек вы берёте? (1-3): \"))\n",
+    "            \n",
+    "            if taken not in [1, 2, 3]:\n",
+    "                print(\"Можно брать только 1, 2 или 3 палочки!\")\n",
+    "                continue\n",
+    "            if taken > total_sticks:\n",
+    "                print(\"Нельзя взять больше палочек, чем осталось!\")\n",
+    "                continue\n",
+    "            \n",
+    "            total_sticks -= taken  # Уменьшаем количество палочек\n",
+    "            \n",
+    "            if total_sticks == 0:\n",
+    "                print(f\"\\n{players[turn]} взял последние палочки и проиграл! Победил {players[1 - turn]}!\")\n",
+    "                break\n",
+    "\n",
+    "            turn = 1 - turn  # Меняем игрока\n",
+    "\n",
+    "        except ValueError:\n",
+    "            print(\"Ошибка! Введите число от 1 до 3.\")\n",
+    "\n",
+    "sticks_game()\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
