--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -288,52 +288,601 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5fa452b8-9b5b-4138-9811-1c011bd426c0",
+   "execution_count": 38,
+   "id": "74c9369b-7cce-4141-bbac-5ad7d7beff71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please insert amount of sticks or it will be 10 by default 10\n",
+      "Insert first player name 2\n",
+      "Insert second player name 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 10 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 7 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 5 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 33\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take only 1, 2 or 3 of sticks\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take up to 2\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take up to 2\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take up to 2\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take up to 2\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 33\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take only 1, 2 or 3 of sticks\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take up to 2\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take up to 2\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take up to 2\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 33\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take only 1, 2 or 3 of sticks\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 33\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take only 1, 2 or 3 of sticks\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take only integer amount of sticks\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take up to 2\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take up to 2\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 333\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can take only 1, 2 or 3 of sticks\n",
+      "there are 2 sticks left, please take 1,2 or 3 sticks\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "2 how many sticks will you take? 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 took last stick and loose the game\n"
+     ]
+    }
+   ],
+   "source": [
+    "def stickGame():\n",
+    "    totalAmount = int(input('Please insert amount of sticks or it will be 10 by default') or 10)\n",
+    "\n",
+    "    player1 = input('Insert first player name') or 'Player1'\n",
+    "    player2 = input('Insert second player name') or 'Player2'\n",
+    "\n",
+    "    players = [player1, player2];\n",
+    "\n",
+    "    turn = 0\n",
+    "\n",
+    "    while totalAmount > 0: \n",
+    "        try:\n",
+    "            print(f'there are {totalAmount} sticks left, please take 1,2 or 3 sticks')\n",
+    "            takenAmount = int(input(f'{players[turn]} how many sticks will you take?'))\n",
+    "            if takenAmount not in [1,2,3]:\n",
+    "             print('You can take only 1, 2 or 3 of sticks')\n",
+    "             continue\n",
+    "            if takenAmount > totalAmount:\n",
+    "             print(f'You can take up to {totalAmount}')\n",
+    "            continue\n",
+    "            \n",
+    "            \n",
+    "            totalAmount -= takenAmount\n",
+    "            turn = 1 - turn\n",
+    "        except ValueError:\n",
+    "             print('You can take only integer amount of sticks')\n",
+    "\n",
+    "\n",
+    "    print(f'{players[turn]} took last stick and loose the game')\n",
+    "\n",
+    "stickGame()\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dd40d59d-240c-4327-9510-f36ace5dc44b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def squares(*args):\n",
+    "    return [x*x for x in args]\n",
+    "res = squares(1,2,3,4,5)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a98e86e8-89ab-467b-9b01-488a6f97ff1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square(num):\n",
+    "    return num*num\n",
+    "nums = [1,2,3,4,5]\n",
+    "\n",
+    "res = map(square, nums);\n",
+    "nums\n",
+    "print(list(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4c03e528-df8d-4b12-87de-5c6a102d0663",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25, 38]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isAdult(age):\n",
+    "    return age>=18\n",
+    "ages = [10, 15,25,38]\n",
+    "res = filter(isAdult, ages)\n",
+    "print(list(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c7514ca8-4aa1-4e62-bcba-6988cd2d44ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[25, 38]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isAdult = lambda age: age>=18\n",
+    "list(filter(isAdult, ages))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "c76ac071-71d3-442d-9fcc-175a2d52f683",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sticks_game():\n",
-    "    print(\"Добро пожаловать в игру 'Игра в палочки'!\")\n",
-    "    \n",
-    "    # Запрос начального количества палочек\n",
-    "    total_sticks = int(input(\"Введите количество палочек (по умолчанию 10): \") or 10)\n",
-    "    \n",
-    "    # Запрос имен игроков\n",
-    "    player1 = input(\"Введите имя первого игрока: \") or \"Игрок 1\"\n",
-    "    player2 = input(\"Введите имя второго игрока: \") or \"Игрок 2\"\n",
-    "    \n",
-    "    players = [player1, player2]  # Очередность игроков\n",
-    "    turn = 0  # Индекс текущего игрока\n",
-    "\n",
-    "    while total_sticks > 0:\n",
-    "        print(f\"\\nПалочек осталось: {total_sticks}\")\n",
-    "        \n",
-    "        # Запрос хода\n",
-    "        try:\n",
-    "            taken = int(input(f\"{players[turn]}, сколько палочек вы берёте? (1-3): \"))\n",
-    "            \n",
-    "            if taken not in [1, 2, 3]:\n",
-    "                print(\"Можно брать только 1, 2 или 3 палочки!\")\n",
-    "                continue\n",
-    "            if taken > total_sticks:\n",
-    "                print(\"Нельзя взять больше палочек, чем осталось!\")\n",
-    "                continue\n",
-    "            \n",
-    "            total_sticks -= taken  # Уменьшаем количество палочек\n",
-    "            \n",
-    "            if total_sticks == 0:\n",
-    "                print(f\"\\n{players[turn]} взял последние палочки и проиграл! Победил {players[1 - turn]}!\")\n",
-    "                break\n",
-    "\n",
-    "            turn = 1 - turn  # Меняем игрока\n",
-    "\n",
-    "        except ValueError:\n",
-    "            print(\"Ошибка! Введите число от 1 до 3.\")\n",
-    "\n",
-    "sticks_game()\n",
-    "    "
+    "# Function scopes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f8c35391-28c2-481e-a6a9-0cf0195e8024",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello from enclosing scope\n",
+      "Hello from global scope\n"
+     ]
+    }
+   ],
+   "source": [
+    "greeting = 'Hello from global scope'\n",
+    "def greet():\n",
+    "        greeting = 'hello from enclosing scope'\n",
+    "        def nested():\n",
+    "            #greeting = 'Hello from local scope'\n",
+    "            print(greeting)\n",
+    "        nested()\n",
+    "greet()\n",
+    "print(greeting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e06f553-b714-4ece-8d12-d49d03847dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Decorators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dc5defcb-b6ae-4e51-a20e-98fede555a6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "def helloWorld(): \n",
+    "    print('hello world')\n",
+    "helloWorld() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "407b6167-3644-489d-8b82-d325f19450ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello = helloWorld"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d95e1909-09fc-4373-a977-494352f06341",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d7f11c29-33d8-4dcb-9dd3-de8a3b490885",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calling foo - <function hello at 0x1684c71a0>\n",
+      "Hello world\n",
+      "finished with foo - <function hello at 0x1684c71a0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def logDecorator(foo):\n",
+    "    def wrap():\n",
+    "        print(f'calling foo - {foo}')\n",
+    "        foo()\n",
+    "        print(f'finished with foo - {foo}')\n",
+    "    return wrap\n",
+    "\n",
+    "def hello():\n",
+    "    print('Hello world')\n",
+    "\n",
+    "wrappedFoo = logDecorator(hello)\n",
+    "wrappedFoo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0eb304fc-4a9e-42f2-bce3-09885473f6ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@logDecorator\n",
+    "def hello():\n",
+    "    print('Hello world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9b4e42d5-cf53-4155-99ec-9bf089af890a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calling foo - <function hello at 0x1684c76a0>\n",
+      "Hello world\n",
+      "finished with foo - <function hello at 0x1684c76a0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd7ef428-274a-41fe-a326-4bb5f1ab5b97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
