Task with numbers

--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "f8c35391-28c2-481e-a6a9-0cf0195e8024",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9e06f553-b714-4ece-8d12-d49d03847dbd",
    "metadata": {},
    "outputs": [],
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "dc5defcb-b6ae-4e51-a20e-98fede555a6c",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "407b6167-3644-489d-8b82-d325f19450ec",
    "metadata": {},
    "outputs": [],
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "d95e1909-09fc-4373-a977-494352f06341",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "d7f11c29-33d8-4dcb-9dd3-de8a3b490885",
    "metadata": {},
    "outputs": [
@@ -823,17 +823,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calling foo - <function hello at 0x1684c71a0>\n",
+      "calling foo - <function hello at 0x1661a2f20>\n",
       "Hello world\n",
-      "finished with foo - <function hello at 0x1684c71a0>\n"
+      "finished with foo - <function hello at 0x1661a2f20>\n"
      ]
     }
    ],
    "source": [
     "def logDecorator(foo):\n",
-    "    def wrap():\n",
+    "    def wrap(*args, **kwargs):\n",
     "        print(f'calling foo - {foo}')\n",
-    "        foo()\n",
+    "        foo(*args, **kwargs)\n",
     "        print(f'finished with foo - {foo}')\n",
     "    return wrap\n",
     "\n",
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "0eb304fc-4a9e-42f2-bce3-09885473f6ad",
    "metadata": {},
    "outputs": [],
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "9b4e42d5-cf53-4155-99ec-9bf089af890a",
    "metadata": {},
    "outputs": [
@@ -866,9 +866,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calling foo - <function hello at 0x1684c76a0>\n",
+      "calling foo - <function hello at 0x1661a3380>\n",
       "Hello world\n",
-      "finished with foo - <function hello at 0x1684c76a0>\n"
+      "finished with foo - <function hello at 0x1661a3380>\n"
      ]
     }
    ],
@@ -878,8 +878,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "3a376998-d461-481a-b581-abf444603013",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function wrap in module __main__:\n",
+      "\n",
+      "wrap(*args, **kwargs)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(hello)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "7fdf7af9-b686-4123-87c4-8ab568705351",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#wraps decorator helps with introspectors - more stable and predictable path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "bd7ef428-274a-41fe-a326-4bb5f1ab5b97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import wraps\n",
+    "\n",
+    "def logDecorator(foo):\n",
+    "    @wraps(foo)\n",
+    "    def wrap(*args, **kwargs):\n",
+    "        print(f'calling foo - {foo}')\n",
+    "        foo(*args, **kwargs)\n",
+    "        print(f'finished with foo - {foo}')\n",
+    "    return wrap\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f698c5e7-6960-42d2-b99c-f9dd73b8a7a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@logDecorator\n",
+    "def hello():\n",
+    "    print('Hello world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c1b267f7-8109-494d-b92f-c64ab295320d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function hello in module __main__:\n",
+      "\n",
+      "hello()\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(hello)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9db58453-99f7-4657-87e3-75fe523d0a72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write a foo that takes string - romulan nums and returns arabic one I - 1 V - 5 X - 10 L - 50 C - 100 D - 500 M - 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "e5eed9d9-d7c6-4619-a097-eae903aca1f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "romList = ('I', 'V', 'X', 'L', 'C', 'D', 'M')\n",
+    "arabList = (1, 5, 10, 50, 100, 500, 1000)\n",
+    "def transformNums(rom):\n",
+    "    result = 0\n",
+    "    numsDict = dict(zip(romList, arabList))\n",
+    "\n",
+    "    for i, char in enumerate(rom):\n",
+    "        if i < len(rom) - 1 and numsDict[char] < numsDict[rom[i + 1]]:\n",
+    "            result -= numsDict[char]\n",
+    "        else:\n",
+    "            result += numsDict[char]\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "transformNums('IV')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "294bbf3c-badc-4280-99bc-f56ce9df226d",
    "metadata": {},
    "outputs": [],
    "source": []
