Exceptions and Unit testng

--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -1010,6 +1010,333 @@
    "id": "294bbf3c-badc-4280-99bc-f56ce9df226d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Errors and exceptiona handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "223f750d-6bd4-43a8-b9ba-79edc5f3cee6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def divide1(a,b):\n",
+    "    return print(a/b);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "25a7a58f-3bae-4e2d-a3f1-213b28707b57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "divide1(4,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0a1be2f8-f7cc-4b66-8361-d3cc59aa2037",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m divide1(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m0\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m, in \u001b[0;36mdivide1\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdivide1\u001b[39m(a,b):\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m/\u001b[39mb)\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "divide1(2,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "71b0a815-1e99-423e-ada5-eb5bf7123528",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def divide2(a,b):\n",
+    "    try:\n",
+    "        return print(a/b);\n",
+    "    except:\n",
+    "        print(f'woop, we have an error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "545eb5b8-be98-4e9f-bbfc-ccb6cb16119a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "woop, we have an error\n"
+     ]
+    }
+   ],
+   "source": [
+    "divide2(2,'ha')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18796f8a-ac77-4f63-b096-981ff7987786",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1f4f293e-a18e-49c6-a326-ef6f2844ab97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getInt():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            reply = int(input('Enter any num...'));\n",
+    "            return print(reply);\n",
+    "        except:\n",
+    "            print('Not a num, try again')\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "4f3ebb72-5c2b-4481-b9c8-86f011c70452",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter any num... fd\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not a num, try again\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter any num... ee\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not a num, try again\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter any num... 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "getInt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8af4a346-44b2-4f6d-91e1-6c6a78d07e67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Custom exceptions with RAISE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "32166261-851e-4a55-ae50-aa7a1dbd2f4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def calcSquareTriangle(ab,ac, bc):\n",
+    "    if ab<=0 or ac<=0 or bc <=0:\n",
+    "        raise ValueError('One of the sides is less or equal to 0')\n",
+    "    p = (ab + bc + ac) / 2\n",
+    "    s = math.sqrt(p* (p-ab) * (p-ac) * (p-bc))\n",
+    "\n",
+    "    return print(s)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "6962b2bf-12bd-4b4c-be61-310b1df3caa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.897114317029974\n"
+     ]
+    }
+   ],
+   "source": [
+    "calcSquareTriangle(3,3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "cbee6a95-dfb8-4d1b-887e-777103a8c2b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "One of the sides is less or equal to 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[48], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m calcSquareTriangle(\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[44], line 5\u001b[0m, in \u001b[0;36mcalcSquareTriangle\u001b[0;34m(ab, ac, bc)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalcSquareTriangle\u001b[39m(ab,ac, bc):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ab\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m ac\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m bc \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m----> 5\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOne of the sides is less or equal to 0\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m     p \u001b[38;5;241m=\u001b[39m (ab \u001b[38;5;241m+\u001b[39m bc \u001b[38;5;241m+\u001b[39m ac) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m      7\u001b[0m     s \u001b[38;5;241m=\u001b[39m math\u001b[38;5;241m.\u001b[39msqrt(p\u001b[38;5;241m*\u001b[39m (p\u001b[38;5;241m-\u001b[39mab) \u001b[38;5;241m*\u001b[39m (p\u001b[38;5;241m-\u001b[39mac) \u001b[38;5;241m*\u001b[39m (p\u001b[38;5;241m-\u001b[39mbc))\n",
+      "\u001b[0;31mValueError\u001b[0m: One of the sides is less or equal to 0"
+     ]
+    }
+   ],
+   "source": [
+    "calcSquareTriangle(3,-3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0efc963-e6bd-41da-9ca0-4b4ea45fffd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#valueerror is default exception object  from py library, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fea7c35-c6fa-49b9-b61a-59b3d9076fb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can use custom ecxeption via class syntax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f7343caf-d5f6-48a8-a731-e7945295f0bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InvalidTriangleError(Exception):\n",
+    "    \"\"\"Raised when a triangle has invalid side\"\"\"\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4b14caef-35bd-4971-a93a-c440011c0543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def calcSquareTriangle(ab,ac, bc):\n",
+    "    if ab<=0 or ac<=0 or bc <=0:\n",
+    "        raise InvalidTriangleError('One of the sides is less or equal to 0')\n",
+    "    p = (ab + bc + ac) / 2\n",
+    "    s = math.sqrt(p* (p-ab) * (p-ac) * (p-bc))\n",
+    "\n",
+    "    return print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "377ab679-60bc-4b22-a514-d494a3e9e31f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InvalidTriangleError",
+     "evalue": "One of the sides is less or equal to 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInvalidTriangleError\u001b[0m                      Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m calcSquareTriangle(\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m, in \u001b[0;36mcalcSquareTriangle\u001b[0;34m(ab, ac, bc)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalcSquareTriangle\u001b[39m(ab,ac, bc):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ab\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m ac\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m bc \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m----> 5\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidTriangleError(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOne of the sides is less or equal to 0\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m     p \u001b[38;5;241m=\u001b[39m (ab \u001b[38;5;241m+\u001b[39m bc \u001b[38;5;241m+\u001b[39m ac) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m      7\u001b[0m     s \u001b[38;5;241m=\u001b[39m math\u001b[38;5;241m.\u001b[39msqrt(p\u001b[38;5;241m*\u001b[39m (p\u001b[38;5;241m-\u001b[39mab) \u001b[38;5;241m*\u001b[39m (p\u001b[38;5;241m-\u001b[39mac) \u001b[38;5;241m*\u001b[39m (p\u001b[38;5;241m-\u001b[39mbc))\n",
+      "\u001b[0;31mInvalidTriangleError\u001b[0m: One of the sides is less or equal to 0"
+     ]
+    }
+   ],
+   "source": [
+    "calcSquareTriangle(3,-3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae14d212-46b4-44d6-b44f-5d8f836a7b29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#unit testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be1e8933-022a-4cdb-905d-55059928d718",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
