--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -1328,16 +1328,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#unit testing"
+    "#Сlasses basics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "be1e8933-022a-4cdb-905d-55059928d718",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CharSuper():\n",
+    "    def __init__(self, race): #here we're defining constructor method - __name__ - special methods \n",
+    "        self.race = race #self - attr of instance  - link on self of class\n",
+    "\n",
+    "    def getRace(self):\n",
+    "        return self.race"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d608905b-89db-44f1-aaa7-b13a5814b8c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.CharSuper"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unit = CharSuper('Human')\n",
+    "type(unit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "aafe4f9d-6bab-4535-ad86-302738c6aabf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "CharSuper.getRace() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[47], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m unit\u001b[38;5;241m.\u001b[39mgetRace()\n",
+      "\u001b[0;31mTypeError\u001b[0m: CharSuper.getRace() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
+   "source": [
+    "unit.getRace()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be1e8933-022a-4cdb-905d-55059928d718",
+   "id": "5cf8c727-43e8-433a-a879-7f39deb950ca",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class CharSuper():\n",
+    "    def __init__(self, race, damage = 10, armor = 20): \n",
+    "        self.race = race \n",
+    "\n",
+    "    def getRace():\n",
+    "        return print(self.race)"
+   ]
   }
  ],
  "metadata": {
